# Jull_web

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app_jull/: .env.example  __init__.py  asgi.py  celery.py  settings.py  test_db.sqlite3
app_jull/app_jull/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app_jull/app_photo/: apps.py  forms.py  models.py  urls.py  views.py
app_jull/app_photo/migrations/: 0001_initial.py  0002_alter_picture_image.py  0002_rename_image_picture_file_picture_file_type.py  0003_alter_picture_file.py  0003_picture_user.py  0004_remove_picture_file_remove_picture_file_type_and_more.py  0005_alter_picture_image.py
app_jull/news/: apps.py  models.py  signals.py  tasks.py  urls.py  views.py
app_jull/notes/: forms.py  urls.py  views.py
app_jull/notes/migrations/: 0001_initial.py  0002_tag_note_created_at_remove_note_tags_note_tags.py
app_jull/users/: admin.py  forms.py  models.py  urls.py  views.py
app_jull/users/migrations/: 0001_initial.py  0002_alter_customuser_avatar_alter_profile_avatar.py  0003_alter_customuser_avatar.py  0004_alter_profile_avatar.py
app_jull/utils/customs/: custom_logger.py
app_jull/utils/run_spiders/: spider_runner.py
app_jull/utils/scrapped_info/: articles_news.json  currency_eur_rate.json  currency_usd_rate.json  science_news.json  sport_news.json  techno_news.json  weather_final.json  (+2 more)
app_photo/: forms.py  models.py  urls.py  views.py
app_photo/migrations/: 0002_initial.py
news/: __init__.py  models.py  urls.py  views.py
notes/: models.py  urls.py  views.py
users/: apps.py  forms.py  signals.py  urls.py  views.py
utils/customs/: custom_logger.py
utils/scrapped_info/: articles_news_sc.json  currency_usd_rate.json  techno_news.json  weather_final.json
utils/spiders/: articles_scrape.py  currency_usd_scrape.py  techno_scrape.py
(+80 files in other folders)
