[tool.poetry]
name = "jull-web"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <142345037+DmytroSDV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
cloudinary = "^1.40.0"
django-cloudinary-storage = "^0.3.0"
pillow = "^10.3.0"
python-magic = "^0.4.27"
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
