[tool.poetry]
name = "jull-web"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <142345037+DmytroSDV@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
cloudinary = "1.40.0"
django-cloudinary-storage = "^0.3.0"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
requests = "^2.31.0"
redis = "^5.0.4"
django-redis = "^5.4.0"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
eventlet = "^0.36.1"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
psycopg2 = "^2.9.9"
scrapy = "^2.11.1"


[tool.poetry.group.test.dependencies]
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
